Create multiple development script options for better compatibility
Added scripts:
- start-concurrent.js: Simple concurrent startup with stdio inherit
- start-dev-simple.js: Basic startup with better error handling
- start-dev.js: Advanced script with full features

Updated package.json:
- npm run dev: Uses start-concurrent.js (most reliable)
- npm run dev:simple: Uses start-dev-simple.js
- npm run dev:advanced: Uses start-dev.js (full features)

This provides multiple options for different environments and debugging needs.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev": "node start-dev.js",
+    "dev": "node start-concurrent.js",
+    "dev:simple": "node start-dev-simple.js",
+    "dev:advanced": "node start-dev.js",
     "dev:backend": "npm run start:dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm install && cd frontend && npm install",
