--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "dev:backend": "npm run start:dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm install && cd frontend && npm install",
-    "setup": "npm run install:all && npm run dev"
+    "setup": "npm run install:all && npm run dev",
+    "clean": "node clean-project.js",
+    "clean:deps": "rm -rf node_modules frontend/node_modules",
+    "clean:build": "rm -rf dist frontend/.next frontend/out",
+    "clean:cache": "rm -rf .cache frontend/.cache logs coverage",
+    "reset": "npm run clean && npm run install:all"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
