--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "install:all": "npm install && cd frontend && npm install",
     "setup": "npm run install:all && npm run dev",
     "clean": "node clean-project.js",
+    "clean:duplicates": "node find-duplicates.js",
     "clean:deps": "rm -rf node_modules frontend/node_modules",
     "clean:build": "rm -rf dist frontend/.next frontend/out",
     "clean:cache": "rm -rf .cache frontend/.cache logs coverage",
