Fix API endpoints and complete frontend-backend integration
 FIXED ISSUES:
- Fixed frontend API calls to match backend endpoints
- Added missing scraping endpoints for categories and products
- Updated scraping service to use correct endpoint paths
- Fixed port configuration consistency

 BACKEND IMPROVEMENTS:
- Added POST /categories/navigation/:navigationSlug/refresh endpoint
- Added POST /products/category/:categorySlug/refresh endpoint
- All scraping triggers now properly mapped

 FRONTEND IMPROVEMENTS:
- Updated scrapingApi to use /navigation/refresh
- Updated scrapingApi to use /categories/navigation/{slug}/refresh
- Updated scrapingApi to use /products/category/{slug}/refresh
- Fixed API endpoint paths for proper backend communication

 SYSTEM STATUS:
- Backend: Running on port 3002 with all endpoints
- Frontend: Running on port 3000 with professional control panel
- Database: MongoDB running on port 27017
- API Integration: Fully connected and working

 READY FOR USE:
- Control panel accessible at http://localhost:3000
- All scraping triggers functional
- Real-time job monitoring working
- Professional design implemented

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "clean:deps": "rm -rf node_modules frontend/node_modules",
     "clean:build": "rm -rf dist frontend/.next frontend/out",
     "clean:cache": "rm -rf .cache frontend/.cache logs coverage",
-    "reset": "npm run clean && npm run install:all"
+    "reset": "npm run clean && npm run install:all",
+    "start-all": "node start-all.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
