Fix critical system issues and standardize ports
 CRITICAL FIXES:
- Fixed syntax errors in start-concurrent.js ('=' .repeat  '='.repeat)
- Fixed syntax errors in find-duplicates.js ('=' .repeat  '='.repeat)
- Added error handling for file operations in find-duplicates.js
- Fixed corrupted tsconfig.json causing compilation errors
- Cleaned dist folder to resolve TypeScript conflicts

 PORT STANDARDIZATION:
- Backend: Now runs on port 3000 (matches Dockerfile/README)
- Frontend: Now runs on port 3001 (avoids conflicts)
- Updated all configuration files for consistency
- Fixed API rewrites to use correct backend port

 SCRIPT FIXES:
- Fixed missing script references (dev:simple, dev:advanced  start-concurrent.js)
- Added rimraf for cross-platform compatibility (replaces rm -rf)
- Updated package.json scripts for Windows compatibility

 DOCUMENTATION:
- Created .env.example at root (was missing)
- Updated README with correct setup instructions
- Added proper port information and access points
- Fixed environment variable setup instructions

 IMPACT:
- All dev scripts now work without syntax errors
- Port conflicts resolved between services
- Docker builds will work with correct ports
- Cross-platform compatibility improved
- New users can follow README successfully

--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "dev": "node start-concurrent.js",
-    "dev:simple": "node start-dev-simple.js",
-    "dev:advanced": "node start-dev.js",
+    "dev:simple": "node start-concurrent.js",
+    "dev:advanced": "node start-concurrent.js",
     "dev:backend": "npm run start:dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm install && cd frontend && npm install",
     "setup": "npm run install:all && npm run dev",
     "clean": "node clean-project.js",
     "clean:duplicates": "node find-duplicates.js",
-    "clean:deps": "rm -rf node_modules frontend/node_modules",
-    "clean:build": "rm -rf dist frontend/.next frontend/out",
-    "clean:cache": "rm -rf .cache frontend/.cache logs coverage",
+    "clean:deps": "rimraf node_modules frontend/node_modules",
+    "clean:build": "rimraf dist frontend/.next frontend/out",
+    "clean:cache": "rimraf .cache frontend/.cache logs coverage",
     "reset": "npm run clean && npm run install:all",
     "start-all": "node start-all.js"
   },
@@ -66,6 +66,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
