Clean up repository: organize files and remove unused clutter
 FILE ORGANIZATION:
- Created docs/archive/ for historical planning documents
- Created scripts/cleanup/ for maintenance scripts
- Created scripts/windows/ for Windows-specific scripts

 ARCHIVED FILES (Type A - High-confidence unused):
- DIR-STRUCTURE.txt  docs/archive/
- DUPLICATE-CLEANUP.md  docs/archive/
- FRONTEND-ANALYSIS.md  docs/archive/
- FRONTEND-REDESIGN-PROGRESS.md  docs/archive/
- PROJECT-AUDIT.md  docs/archive/
- PROJECT-STRUCTURE.md  docs/archive/
- PROJECT-VALIDATION.md  docs/archive/
- SYSTEM-STATUS.md  docs/archive/
- README-DEV.md  docs/archive/ (content merged into main README)

 REORGANIZED FILES (Type B - Better placement):
- clean-project.js  scripts/cleanup/
- find-duplicates.js  scripts/cleanup/
- start-all.js  scripts/
- start-concurrent.js  scripts/
- start-all.bat  scripts/windows/

 UPDATED REFERENCES:
- Updated all package.json scripts to use new file paths
- Consolidated developer guide into main README.md
- Added comprehensive project structure documentation

 PRESERVED FILES (Type C - Critical):
- All source code (src/, frontend/, api-gateway/)
- Configuration files (package.json, tsconfig.json, Dockerfile)
- Build artifacts (node_modules/, package-lock.json)
- Git configuration (.gitignore)

 RESULT:
- Cleaner repository root with only essential files
- Organized documentation structure
- Maintained all functionality while improving organization
- Better developer experience with clear file locations

--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dev": "node start-concurrent.js",
-    "dev:simple": "node start-concurrent.js",
-    "dev:advanced": "node start-concurrent.js",
+    "dev": "node scripts/start-concurrent.js",
+    "dev:simple": "node scripts/start-concurrent.js",
+    "dev:advanced": "node scripts/start-concurrent.js",
     "dev:backend": "npm run start:dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm install && cd frontend && npm install",
     "setup": "npm run install:all && npm run dev",
-    "clean": "node clean-project.js",
-    "clean:duplicates": "node find-duplicates.js",
+    "clean": "node scripts/cleanup/clean-project.js",
+    "clean:duplicates": "node scripts/cleanup/find-duplicates.js",
     "clean:deps": "rimraf node_modules frontend/node_modules",
     "clean:build": "rimraf dist frontend/.next frontend/out",
     "clean:cache": "rimraf .cache frontend/.cache logs coverage",
     "reset": "npm run clean && npm run install:all",
-    "start-all": "node start-all.js"
+    "start-all": "node scripts/start-all.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
